--- a/src/pages/HomePage/config/i18n/ru.json
+++ b/src/pages/HomePage/config/i18n/ru.json
@@ -5,7 +5,14 @@
         "button": "Открыть меню"
     },
     "services": {
-        "title": "Сочетание культуры, кофе и первоклассного обслуживания"
+        "title": "Сочетание культуры, кофе и первоклассного обслуживания",
+        "list": {
+            "equipment": "Оборудование",
+            "coffeeOptions": "Варианты кофе",
+            "coffee": "Кофе с собой",
+            "confectionery": "Кондитерские изделия",
+            "selectedGrains": "Отборные зерна"
+        }
     },
     "popularity": {
         "title": "Популярные позиции",
