--- a/src/widgets/ProductsList/config/i18n/en.json
+++ b/src/widgets/ProductsList/config/i18n/en.json
@@ -1,7 +1,8 @@
 {
     "productsList": {
         "item": {
-            "type": "type"
+            "type": "type",
+            "addToCart": "Product added to cart"
         }
     }
 }
