--- a/src/widgets/ProductsList/config/i18n/ru.json
+++ b/src/widgets/ProductsList/config/i18n/ru.json
@@ -1,7 +1,8 @@
 {
     "productsList": {
         "item": {
-            "type": "тип"
+            "type": "тип",
+            "addToCart": "Товар добавлен в корзину"
         }
     }
 }
